--- a/docusaurus/src/css/custom.css
+++ b/docusaurus/src/css/custom.css
@@ -6,25 +6,25 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #285c7f;
+  --ifm-color-primary-dark: #245372;
+  --ifm-color-primary-darker: #224e6c;
+  --ifm-color-primary-darkest: #1c4059;
+  --ifm-color-primary-light: #2c658c;
+  --ifm-color-primary-lighter: #2e6a92;
+  --ifm-color-primary-lightest: #3478a5;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+[data-theme="dark"] {
+  --ifm-color-primary: #4db1f4;
+  --ifm-color-primary-dark: #2fa4f2;
+  --ifm-color-primary-darker: #209df1;
+  --ifm-color-primary-darkest: #0d84d4;
+  --ifm-color-primary-light: #6bbef6;
+  --ifm-color-primary-lighter: #7ac5f7;
+  --ifm-color-primary-lightest: #a8d9fa;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
